Upgrade to Java 11 (#17)